# VideoVault

./: CLAUDE.md  README.md  docker-compose.yml  downloader.py  main.py  pyproject.toml  requirements.txt  selenium_driver.py  test_douyin.py  utils.py  video_downloader.py
.claude/agent/: deployer.md  researcher.md  validator.md
.claude/rules/: 02-database.rules.md  03-backend.rules.md  04-frontend.rules.md  05-docker.rules.md  06-ci-cd.rules.md  07-deployment.rules.md  08-vps-specs.rules.md  09-development-tools.rules.md  10-powershell-encoding.rules.md  overview.rules.md
.claude/skills/: powershell-encoding.skill.md  template.skill.md
backend/: Dockerfile  VideoVault.sln
backend/src/VideoVault.API/: Program.cs  VideoVault.API.csproj  VideoVault.API.http
backend/src/VideoVault.API/Controllers/: AiController.cs  (+4 more)
backend/src/VideoVault.Application/: VideoVault.Application.csproj
backend/src/VideoVault.Infrastructure/: VideoVault.Infrastructure.csproj
database/: init.sql  schema.sql  seed_users.sql  sync_migrations.sql
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: MainLayout.tsx  router.tsx
frontend/src/components/: VideoCard.tsx
frontend/src/lib/: utils.ts
frontend/src/routes/: auth.tsx  dashboard.tsx  downloads.tsx  subscriptions.tsx
frontend/src/store/: useStore.ts
scratch/: test_subscription_downloads.py
scratch/plan_comparison/: comparison_report.json
tests/: test_downloader.py  test_selenium_fallback.py  test_utils.py
(+59 files in other folders)
