[project]
name = "video-downloader"
version = "0.1.0"
description = "CLI tool to download videos from various platforms (Douyin, TikTok, Xiaohongshu, Bilibili, YouTube, etc.)"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "yt-dlp>=2023.12.0",
    "requests>=2.31.0",
]

[project.scripts]
video-downloader = "main:main"